--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <h1>Welcome to Riyadh</h1>
     <!-- HEADER -->
-    <h2>Where a traditional</h2>
+    <h2>Where a Traditional Past Meets a Modern Future.</h2>
     <!-- SUB HEAD -->
 
     <div id="content">
